--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,3 +3,4 @@
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/portfolio.scss";
+@import "blocks/page-main.scss";
