--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -19,6 +19,8 @@
   border-radius: 10px;
 
   background: linear-gradient(to top, #000000, #4d4d4d);
+
+  cursor: pointer;
 }
 
 .page-header__link-img {
