--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  padding-top: 110px;
+  padding-top: 130px;
+  padding-bottom: 58px;
 
   background-color: #ded8ca;
   color: #000000;
