--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,6 @@
 @import "blocks/main-nav.scss";
 @import "blocks/portfolio.scss";
 @import "blocks/page-main.scss";
+@import "blocks/about.scss";
+@import "blocks/main-aside.scss";
+@import "blocks/page-footer.scss";
